1998-12-11  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/SYSTEM.NOTES (Ultrix): recommend gcc or egcs
	(IRIX): patch for xfsdump estimates

1998-12-10  John R. Jackson  <jrj@purdue.edu>

	* common-src/amflock.c (main): remove call set_pname() for
	CONFIGURE_TEST since error.o is not linked in.

1998-12-10  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (struct databuf): add a fd member - the file
	descriptor that we are buffering
	* server-src/dumper.c (update_dataptr): remove
	outf arguments, use the fd in the passed databuf.  Return 0 on
	success, and -1 on error.
	* server-src/dumper.c (update_dataptr): rework and comment the
	chunk code a bit.  Get rid of the cont_filename global.
	* server-src/dumper.c (do_dump): init the fd member of the databuf
	* server-src/dumper.c (write_dataptr): fold back into update_dataptr

1998-12-10  John R. Jackson  <jrj@purdue.edu>

	* common-src/amflock.c (main): report CONFIGURE_TEST error messages to
	stderr.

1998-12-10  John R. Jackson  <jrj@purdue.edu>

	* common-src/amflock.c (main): call set_pname() for CONFIGURE_TEST.
	* configure.in: do not set up pname global for lnlock CONFIGURE_TEST.

1998-12-10  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (update_dataptr): remove pointless backups
	of the databuf and associated vars when creating next chunk.
	Remove duplicate setting of file.cont_filename.

1998-12-10  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (main): reuse outfd to clear the open files
	passed to us.  Nuke the fd var.
	* server-src/dumper.c (update_dataptr): nuke 'split' argument - it
	was always set to 1

1998-12-09  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (write_tapeheader): kill dead code
	* server-src/dumper.c (main): remove useless amfree of datestamp.
	Add missing break to 'default' case in command loop.
	* server-src/dumper.c: kill databuf, spaceleft, and dataptr globals.
	Create a 'struct databuf' that holds all three.